# ender-label

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Dockerfile  README.md
server/: CMakeLists.txt  README.md
server/example/: segment.json
server/resources/: config.json
server/sql/: table_init.sql  unique_username_password.sql
server/src/: App.cpp  AppComponent.hpp  ClientComponent.hpp  DatabaseComponent.hpp  ErrorHandler.hpp  ServiceComponent.hpp  SwaggerComponent.hpp
server/src/controller/: DatasetController.hpp  DefaultController.hpp  UserController.hpp
server/src/db/: PgDb.hpp
server/src/dto/data/: AnnotationDto.hpp  ConfigDto.hpp  CountDto.hpp  DatasetDto.hpp  ExportLogDto.hpp  PermissionDto.hpp  UserDto.hpp
server/src/dto/data/annotation/: AnnotationClassDto.hpp  AnnotationDto.hpp  PoseDto.hpp  (+5 more)
server/src/dto/request/: ExportDatasetRequestDto.hpp  ImportDatasetRequestDto.hpp  LoginRequestDto.hpp  PagedRequestDto.hpp  PaginationRequestDto.hpp  RegisterRequestDto.hpp
server/src/dto/response/: ArrayResponseDto.hpp  BaseResponseDto.hpp  PagedResponseDto.hpp  PaginationResponseDto.hpp
server/src/service/: ServiceBean.hpp
server/src/service/dataset/: AnnotationTask.hpp  BaseDataset.hpp  Dataset.hpp  Image.hpp  ImageDataset.hpp
server/src/service/processor/: BackgroundImageProcessor.hpp  ExportProcessor.hpp
server/src/service/user/: Permission.hpp  User.hpp
server/src/util/: AuthUtil.hpp  ConceptUtil.hpp  ControllerUtil.hpp  ResponseUtil.hpp  SwaggerUtil.hpp  TimeUtil.hpp  TypeUtil.hpp  Util.hpp
server/tools/: create_dto.py  start.py  util.py
(+43 files in other folders)
